--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -1,70 +1,41 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+    --primary-v1: #55C9C9;
+    --primary-v2: #79D4D4;
+    --primary-light-v1: #BAF0F3;
+    --danger-v1: #E97B7B;
+    --info-v1: #2B65AC;
+    --dark-v1: #3D4754;
+    --dark-v2: #8990A3;
+    --light-v1: #FEFEFE;
+    --gray-v1: #B9B9B9;
+    --gray-v2: #D4D4D4;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font: inherit;
+    text-decoration: none;
+    box-sizing: border-box;
+    outline: none;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    background: #FFFFFF;
+    font-family: Roboto, sans-serif;
+    overflow: hidden;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.mt-20px {
+    margin-top: 20px !important;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.mt-30px {
+    margin-top: 30px !important;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+@media (min-width:600px) { /* Tablet Retrato | Mobile Paisagem */ }
+@media (min-width:801px) { /* Notebook e Desktop Pequeno | Tablet Paisagem */ }
+@media (min-width:1025px) { /* Tablets Grandes | Notebooks e Desktop Grandes */ }
+@media (min-width: 1281px) { /* Notebooks e Desktops HD */ }
