--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -24,7 +24,7 @@
 body {
     background: #FFFFFF;
     font-family: Roboto, sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .mt-20px {
