--- a/src/web/src/index.css
+++ b/src/web/src/index.css
@@ -14,6 +14,7 @@
     --gray-v2: #C4C4C4;
     --gray-light-v1: #D4D4D4;
     --gray-light-v2: #D9D9D9;
+    --overlay: rgba(36, 50, 84, .85);
 }
 
 * {
